--- a/style.css
+++ b/style.css
@@ -205,10 +205,16 @@ p{
     font-size: 1.5rem;
 }
 .characterslab{
-    margin-top: 6%;
+    margin-top: 9%;
 }
 .confusingslab{
-    margin-top: 6%;
+    margin-top: 9%;
 }
+.confusingslabcontainer{
+    margin-left: 20px;
+}
+
+
+
 
 }
